Enable `percentage`/`percentile` metrics for event definitions. (#15863)
* Use `SeriesSpec` in event definitions.

* Use `type` instead of `function`, create metric id properly.

* Adjusting to attribute name change.

* Improving `NumberRefExpression` component.

* Memorize current edit step in URL.

* Adding options for `strategy` & `percentile` in event definition form.

* Adding migration.

* Adding test for migration.

* Removing now unused value classes.

* Fixing displaying of `percentage`/`percentile` metrics in event definitions.

* Adding changelog snippet.

* Adding license headers.

* Using explicit locale.

* Adjusting test.

* Checks if already migrated event definitions are untouched.

* Registering subtypes.

* Refactoring `V20200102140000_UnifyEventSeriesId` to be dependency-less.

* Fixing linter hint.

* Using `HasOptionalField` for consistency.

* Adjusting test.

* Adjusting test.

* Backwards-compatible support for event definitions in content packs.

* Adding license header.